[workspace]
resolver = "2"
members = ["apps/*", "crates/*"]
package.edition = "2024"
package.version = "0.1.0"

[workspace.dependencies]
lazy_static = "1.5"
mio = { version = "1.0", features = ["net", "os-poll"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = [
    "time",
    "local-time",
    "tracing",
] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
