[package]
name = "simple_app"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true, features = ["std"] }
sg_errors = { path = "../../crates/errors" }
sg_logging = { path = "../../crates/logging" }
sg_threading = { path = "../../crates/threading" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
