[package]
name = "simple_app"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sg_errors = { path = "../../crates/errors" }
sg_logging = { path = "../../crates/logging" }
sg_threading = { path = "../../crates/threading" }
