[package]
name = "sg_logging"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
chrono = { workspace = true }
log = { workspace = true, features = ["std"] }
sg_errors = { path = "../errors" }
