[package]
name = "sg_logging"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
sg_errors = { path = "../errors" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
