[package]
name = "sg_threading"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
chrono = { workspace = true }
log = { workspace = true, features = ["std"] }
libc = "0.2"
sg_logging = { path = "../logging" }
sg_errors = { path = "../errors" }
